# hevd-exp

./: CLAUDE.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
buffer_overflow_non_paged_pool_nx/: Cargo.toml
buffer_overflow_non_paged_pool_nx/src/: main.rs
memory_disclosure_non_paged_pool_nx_named_pipe/: Cargo.toml
memory_disclosure_non_paged_pool_nx_named_pipe/src/: main.rs
message_manager/: Cargo.toml
message_manager/src/: main.rs
stack_buffer_overflow/: Cargo.toml
stack_buffer_overflow/src/: main.rs
stack_buffer_overflow_acl_edit/: Cargo.toml  README.md
stack_buffer_overflow_acl_edit/src/: main.rs
stack_buffer_overflow_token_stealing/: Cargo.toml
stack_buffer_overflow_token_stealing/src/: main.rs
stack_buffer_overflow_token_stealing_smep_no_kvashadow/: Cargo.toml
stack_buffer_overflow_token_stealing_smep_no_kvashadow/src/: main.rs
stack_buffer_overflow_token_stealing_smep_no_kvashadow_pte/: Cargo.toml
stack_buffer_overflow_token_stealing_smep_no_kvashadow_pte/src/: main.rs
stack_overflow/: Cargo.toml
stack_overflow/src/: main.rs
